# angles-backup

./: .env.example  .env.template  .gitignore  .replit  API_INTEGRATION_DEMO.py  OPERATIONS.md  PHASE_3_COMPLETION_SUMMARY.md  POST_DEPLOYMENT_REPORT.md  README.md  README_BACKEND.md  README_SYNC.md  README_TEST_SYSTEM.md  SYSTEM_OVERVIEW.md  add_synced_column.sql  ai_decision_logger.py  angles_logging.py  auto_scheduler.py  automated_scheduler.py  autosync_files.py  backend_integration_example.py  backend_monitor.py  backup_github.json  backup_local.json  backup_memory_to_supabase.py  backup_notion.json  backup_supabase.json  backup_utils.py  config.json  config.py  config_monitor_service.py  config_versioning.py  create_ai_decision_log.sql  create_architect_table.sql  create_decision_vault.sql  create_memory_backup_table.sql  create_restore_checks_table.sql  create_tables.sql  daily_backup_scheduler.py  daily_memory_backup_scheduler.py  decision_vault_operations.py  (+77 more)
agents/: 2025-08-07-194031-document.txt
alerts/: notify.py
angles/: __init__.py  autosync.py  backend_monitor.py  config.py  cron_runner.py  historical_sweep.py  memory_sync_agent.py  notion_client_wrap.py  openai_bridge.py  restore.py  run_migration.py  supabase_client.py  utils.py
api/: Dockerfile  README.md  __init__.py  config.py  db.py  deps.py  main.py  models.py
attached_assets/: Pasted--Angles-AI-Universe-Memory-System-FULL-BUILD-BACKUP-RESTORE-TEST-SELF-HEAL-AUTO-OPT-1754611560694_1754611560695.txt  (+25 more)
audit/: monthly_audit.py  verify_restore.py
backup/: __init__.py  git_backup.py
(+240 files in other folders)
